# claim-verification-pipeline

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATUS.md  DESIGN_DECISIONS.md  KNOWN_LIMITATIONS.md  README.md  ROADMAP.md  check_antofagasta.py  constraints.txt  index.html  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
adr/: 0001-origin-non-discriminating-verification.md  0002-domain-check.md  0003-quote-match.md  0004-tag-schema.md  0005-pipeline.md  0006-extraction.md  0007-page-fetch.md  0008-url-compare.md  0009-bucket-b-evidence-structure.md  0010-criterion-evidence.md  0011-tpi-extract.md  0012-nzif-live-totalenergies-patagonia.md  0013-designing-bucket-c.md  0014-source-extraction.md  0015-bucket-b-pipeline.md  0016-unified-logging.md  0017-cross-cutting-lessons.md  0018-reconciliation.md  0019-bucket-d-analysis-and-pipeline.md  0020-run-pipeline.md  0021-results-layer.md  0022-known-open-limitations.md  0023-redirect-revalidation.md  0024-triage-accuracy-eval.md  0025-property-based-testing.md  0026-search-unavailability.md  0027-dispatcher-triages-once.md
agent_eval/: __init__.py  adversarial_eval.py  bucket_b_pipeline.py  bucket_c_pipeline.py  bucket_d_analysis.py  bucket_d_pipeline.py  bucket_triage.py  criterion_evidence.py  domain_check.py  extraction.py  ground_truth.py  llm_client.py  log_utils.py  page_fetch.py  pipeline.py  quote_match.py  reconciliation.py  review.py  run_pipeline.py  serialisation.py  source_extraction.py  tag_schema.py  tpi_extract.py  triage_eval.py  url_compare.py  web_search.py
data/: results.json  sample_results.json
scripts/: adversarial_eval.py  run_batch.py  triage_eval.py
src/: bucket_b_pipeline.py  bucket_c_pipeline.py  bucket_d_analysis.py  bucket_d_pipeline.py  bucket_triage.py  criterion_evidence.py  domain_check.py  extraction.py  log_utils.py  page_fetch.py  pipeline.py  quote_match.py  reconciliation.py  review.py  run_pipeline.py  serialisation.py  source_extraction.py  tag_schema.py  tpi_extract.py  url_compare.py  web_search.py
tests/: conftest.py  test_adversarial_eval.py  test_bucket_b_pipeline.py  test_bucket_c_pipeline.py  test_bucket_d_analysis.py  test_bucket_d_pipeline.py  test_bucket_triage.py  test_criterion_evidence.py  test_domain_check.py  test_extraction.py  test_ground_truth.py  test_llm_client.py  test_page_fetch.py  test_pipeline.py  test_properties.py  test_quote_match.py  test_reconciliation.py  test_review.py  test_run_pipeline.py  test_serialisation.py  test_source_extraction.py  test_tag_schema.py  test_tpi_extract.py  test_triage_eval.py  test_url_compare.py  test_web_search.py
