[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-evaluation-framework"
version = "0.1.0"
description = "Evidence-based evaluation pipeline for company climate claims."
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "rapidfuzz>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pypdf>=3.0.0",
    "tavily-python>=0.5.0",
]

[tool.setuptools]
packages = ["agent_eval"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
markers = [
    "live_api: hits the real OpenAI API (costs money, needs network + key); run deliberately",
]
