[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claim-verification-pipeline"
version = "0.2.0"
description = "Evidence-based verification pipeline for company climate claims."
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pypdf>=3.0.0",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
# Development and CI tooling — not required to import or run the package,
# only to test, lint, type-check, and format it. Install with:
#   pip install -e ".[dev]"
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
packages = ["agent_eval"]

[tool.setuptools.package-data]
# py.typed marks the package as typed (PEP 561) so consumers' type checkers
# pick up the annotations.
agent_eval = ["py.typed"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
markers = [
    "live_api: hits the real OpenAI API (costs money, needs network + key); run deliberately",
]

[tool.mypy]
python_version = "3.10"
# Third-party packages (rapidfuzz, openai, tavily, dotenv, pypdf) ship no type
# stubs; ignore their missing imports rather than vendoring stubs we don't own.
ignore_missing_imports = true
# Every function must be annotated and every body is checked — the same
# philosophy as the typed evidence dataclasses, enforced by tooling.
disallow_untyped_defs = true
check_untyped_defs = true
files = ["agent_eval", "scripts"]
